--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "dependencies": {
 	  "express":"^4.x.x",
-	  "body-parser": "^1.x.x"
+	  "body-parser": "^1.x.x",
+    "slack-client": "^0.x"
 	},
   "engines": {
     "node": "^0.10.x"
