--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "dependencies": {
 	  "express":"^4.x.x",
 	  "body-parser": "^1.x.x",
-    "slack-client": "^0.x"
+    "slack-client": "^1.x.x"
 	},
   "engines": {
     "node": "^0.10.x"
